--- a/TuitionManagerView.fxml
+++ b/TuitionManagerView.fxml
@@ -22,6 +22,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project3fx.TuitionManagerController">
     <left>
@@ -69,7 +70,7 @@
                                                 <Insets left="25.0" />
                                             </GridPane.margin>
                                         </Label>
-                                        <ComboBox fx:id="comboBox" onAction="#select" prefHeight="26.0" prefWidth="207.0" promptText="Select a major" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                        <ComboBox fx:id="comboBox" onAction="#getMajor" prefHeight="26.0" prefWidth="207.0" promptText="Select a major" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                         <Label styleClass="LabelText" text="Credits Completed" GridPane.rowIndex="4">
                                             <GridPane.margin>
                                                 <Insets left="25.0" />
@@ -128,7 +129,7 @@
                                                 <Button fx:id="fromFile" alignment="CENTER" mnemonicParsing="false" onAction="#LoadFromFile" text="Load From File" />
                                             </buttons>
                                         </ButtonBar>
-                              <TextField fx:id="creditsCompleted" onAction="#getCreditsCompleted" prefHeight="26.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <TextField fx:id="roster_creditsCompleted" onAction="#getCreditsCompleted" prefHeight="26.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                               <TextField fx:id="roster_lastName" onAction="#getLastName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <TextField fx:id="roster_firstName" onAction="#getFirstName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
 
@@ -289,6 +290,9 @@
         <TextArea fx:id="messageArea" prefHeight="333.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding></TextArea>
+         </padding>
+         <font>
+            <Font size="14.0" />
+         </font></TextArea>
     </bottom>
 </BorderPane>
