--- a/TuitionManagerView.fxml
+++ b/TuitionManagerView.fxml
@@ -26,9 +26,9 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project3fx.TuitionManagerController">
     <left>
-        <TabPane maxHeight="450.0" prefHeight="457.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="TOP_LEFT">
+        <TabPane fx:id="tabPane" maxHeight="450.0" prefHeight="457.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="TOP_LEFT">
             <tabs>
-                <Tab text="Roster">
+                <Tab fx:id="roster_tab" text="Roster">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
@@ -64,7 +64,7 @@
                                                 <Insets left="25.0" />
                                             </GridPane.margin>
                                         </Label>
-                                        <DatePicker fx:id="roster_dob" onAction="#getDob" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                        <DatePicker fx:id="roster_dob" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                         <Label styleClass="LabelText" text="Major" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                                             <GridPane.margin>
                                                 <Insets left="25.0" />
@@ -129,9 +129,9 @@
                                                 <Button fx:id="fromFile" alignment="CENTER" mnemonicParsing="false" onAction="#LoadFromFile" text="Load From File" />
                                             </buttons>
                                         </ButtonBar>
-                              <TextField fx:id="roster_creditsCompleted" onAction="#getCreditsCompleted" prefHeight="26.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <TextField fx:id="roster_lastName" onAction="#getLastName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField fx:id="roster_firstName" onAction="#getFirstName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
+                              <TextField fx:id="roster_creditsCompleted" prefHeight="26.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                              <TextField fx:id="roster_lastName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="roster_firstName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
 
                                     </children>
                                 </GridPane>
@@ -139,7 +139,7 @@
                         </AnchorPane>
                     </content>
                 </Tab>
-                <Tab text="Enroll / Drop">
+                <Tab fx:id="Enroll_DropTab" text="Enroll / Drop">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
@@ -180,8 +180,8 @@
                                         </Label>
                                         <ButtonBar GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
                                             <buttons>
-                                                <Button fx:id="drop" alignment="CENTER" mnemonicParsing="false" text="Drop" />
-                                                <Button fx:id="enroll" alignment="CENTER" mnemonicParsing="false" text="Enroll" />
+                                                <Button fx:id="drop" alignment="CENTER" mnemonicParsing="false" onAction="#dropStudent" text="Drop" />
+                                                <Button fx:id="enroll" alignment="CENTER" mnemonicParsing="false" onAction="#enrollStudent" text="Enroll" />
                                             </buttons>
                                         </ButtonBar>
                               <TextField fx:id="enroll_fname" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
@@ -195,7 +195,7 @@
                             </children></AnchorPane>
                     </content>
                 </Tab>
-                <Tab text="Scholarship">
+                <Tab fx:id="Scholarship_Tab" text="Scholarship">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
@@ -250,7 +250,7 @@
                             </children></AnchorPane>
                     </content>
                 </Tab>
-                <Tab text="Print">
+                <Tab fx:id="Print_Tab" text="Print">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="600.0">
                             <children>
