--- a/src/main/resources/com/example/project3fx/TuitionManagerView.fxml
+++ b/src/main/resources/com/example/project3fx/TuitionManagerView.fxml
@@ -24,7 +24,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project3fx.TuitionManagerController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="600.0" stylesheets="@../../../css/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project3fx.TuitionManagerController">
     <left>
         <TabPane fx:id="tabPane" maxHeight="450.0" prefHeight="457.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="TOP_LEFT">
             <tabs>
@@ -32,7 +32,7 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                             <children>
-                                <GridPane layoutY="5.0" minWidth="-Infinity" prefWidth="600.0" vgap="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+                                <GridPane layoutY="5.0" minWidth="-Infinity" prefHeight="394.0" prefWidth="584.0" vgap="15.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="20.0">
                                     <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="286.7449035644531" minWidth="10.0" prefWidth="180.5" />
                                         <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="448.68577575683594" minWidth="10.0" prefWidth="399.5" />
@@ -43,10 +43,9 @@
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="73.0" minHeight="10.0" prefHeight="61.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="27.0" minHeight="0.0" prefHeight="12.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="27.0" minHeight="0.0" prefHeight="12.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="28.871856689453125" minHeight="10.0" prefHeight="27.839813232421875" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="73.0" minHeight="10.0" prefHeight="50.160186767578125" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="45.0" minHeight="0.0" prefHeight="39.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
                                     <children>
                                         <Label styleClass="LabelText" text="First Name" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
@@ -92,8 +91,8 @@
                                         <CheckBox fx:id="nonResident" mnemonicParsing="false" onAction="#isNonResident" text="Check if Non-Resident" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                                         <GridPane prefHeight="48.0" prefWidth="404.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                                             <columnConstraints>
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="108.0" />
-                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.0" minWidth="10.0" prefWidth="292.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.0" minWidth="10.0" prefWidth="142.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.0" minWidth="10.0" prefWidth="260.0" />
                                             </columnConstraints>
                                             <rowConstraints>
                                                 <RowConstraints maxHeight="48.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
@@ -103,17 +102,17 @@
                                                 <HBox alignment="CENTER_LEFT" prefHeight="29.0" prefWidth="164.0" spacing="10.0" GridPane.columnIndex="1" GridPane.valignment="CENTER">
                                                     <children>
                                                         <RadioButton fx:id="ny" mnemonicParsing="false" onAction="#handleNYandCTbtn" text="NY">
-                                             <toggleGroup>
-                                                <ToggleGroup fx:id="state" />
-                                             </toggleGroup></RadioButton>
+                                                            <toggleGroup>
+                                                                <ToggleGroup fx:id="state" />
+                                                            </toggleGroup></RadioButton>
                                                         <RadioButton fx:id="ct" mnemonicParsing="false" onAction="#handleNYandCTbtn" text="CT" toggleGroup="$state" />
                                                     </children>
                                                 </HBox>
                                                 <RadioButton fx:id="triState" mnemonicParsing="false" onAction="#handleTriState" text="Tri-State">
-                                       <toggleGroup>
-                                          <ToggleGroup fx:id="nonRes" />
-                                       </toggleGroup></RadioButton>
-                                                <RadioButton fx:id="intl" mnemonicParsing="false" onAction="#handleIntl" prefHeight="32.0" prefWidth="92.0" text="International" toggleGroup="$nonRes" GridPane.rowIndex="1" />
+                                                    <toggleGroup>
+                                                        <ToggleGroup fx:id="nonRes" />
+                                                    </toggleGroup></RadioButton>
+                                                <RadioButton fx:id="intl" mnemonicParsing="false" onAction="#handleIntl" prefHeight="20.0" prefWidth="106.0" text="International" toggleGroup="$nonRes" GridPane.rowIndex="1" />
                                                 <HBox alignment="CENTER_LEFT" prefHeight="29.0" prefWidth="164.0" spacing="10.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                                                     <children>
                                                         <CheckBox fx:id="studyAbroad" mnemonicParsing="false" onAction="#handleStudyAbroadCheckBox" text="Study Abroad" />
@@ -121,17 +120,20 @@
                                                 </HBox>
                                             </children>
                                         </GridPane>
-                                        <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
+                                        <ButtonBar fx:id="ButtonBar" buttonOrder="key.unspecified" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" prefHeight="69.0" prefWidth="580.0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
                                             <buttons>
                                                 <Button fx:id="add" alignment="CENTER" mnemonicParsing="false" onAction="#addStudent" text="Add" />
                                                 <Button fx:id="remove" alignment="CENTER" mnemonicParsing="false" onAction="#removeStudent" text="Remove" />
                                                 <Button fx:id="changerMajor" alignment="CENTER" mnemonicParsing="false" onAction="#updateMajor" text="Change Major" />
-                                                <Button fx:id="fromFile" alignment="CENTER" mnemonicParsing="false" onAction="#LoadFromFile" text="Load From File" />
+                                                <Button fx:id="fromFile" alignment="CENTER" minWidth="0.0" mnemonicParsing="false" onAction="#LoadFromFile" prefHeight="36.0" prefWidth="132.0" text="Load From File" />
                                             </buttons>
+                                 <padding>
+                                    <Insets left="10.0" />
+                                 </padding>
                                         </ButtonBar>
-                              <TextField fx:id="roster_creditsCompleted" prefHeight="26.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <TextField fx:id="roster_lastName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField fx:id="roster_firstName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
+                                        <TextField fx:id="roster_creditsCompleted" prefHeight="26.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                        <TextField fx:id="roster_lastName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                        <TextField fx:id="roster_firstName" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
 
                                     </children>
                                 </GridPane>
@@ -184,9 +186,9 @@
                                                 <Button fx:id="enroll" alignment="CENTER" mnemonicParsing="false" onAction="#enrollStudent" text="Enroll" />
                                             </buttons>
                                         </ButtonBar>
-                              <TextField fx:id="enroll_fname" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
-                              <TextField fx:id="enroll_lname" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField fx:id="enroll_Credits" prefHeight="26.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                        <TextField fx:id="enroll_fname" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
+                                        <TextField fx:id="enroll_lname" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                        <TextField fx:id="enroll_Credits" prefHeight="26.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                     </children>
                                     <padding>
                                         <Insets right="20.0" />
@@ -239,9 +241,9 @@
                                                 <Button fx:id="updateSchpAmount" alignment="CENTER" mnemonicParsing="false" onAction="#UpdateSchpAmount" text="Update Scholarship Amount" />
                                             </buttons>
                                         </ButtonBar>
-                              <TextField fx:id="schp_fname" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
-                              <TextField fx:id="schp_lname" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField fx:id="schp_Amount" prefHeight="26.0" prefWidth="182.0" promptText="\$" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                        <TextField fx:id="schp_fname" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" />
+                                        <TextField fx:id="schp_lname" prefHeight="26.0" prefWidth="208.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                        <TextField fx:id="schp_Amount" prefHeight="26.0" prefWidth="182.0" promptText="\$" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                     </children>
                                     <padding>
                                         <Insets right="20.0" />
@@ -287,12 +289,12 @@
         </TabPane>
     </left>
     <bottom>
-        <TextArea fx:id="messageArea" prefHeight="333.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-         <font>
-            <Font size="14.0" />
-         </font></TextArea>
+        <TextArea fx:id="messageArea" editable="false" prefHeight="333.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </padding>
+            <font>
+                <Font size="14.0" />
+            </font></TextArea>
     </bottom>
 </BorderPane>
